// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> should render a Field component, creating a Text child with the provided number 1`] = `
.c0 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
  display: block;
}

.c1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #262D33;
  font-weight: 400;
}

<Field
  label="FTE"
>
  <styled.div>
    <div
      className=""
    >
      <Text
        className="label-component"
        color="#424F5C"
        isInline={false}
        tag="span"
        type="small"
      >
        <styled.span
          className="label-component"
          color="#424F5C"
          data-component-type="text"
          isInline={false}
          textType="small"
        >
          <span
            className="label-component c0"
            color="#424F5C"
            data-component-type="text"
          >
            FTE
          </span>
        </styled.span>
      </Text>
    </div>
  </styled.div>
  <Text
    color="#262D33"
    isInline={true}
    key=".0"
    tag="span"
    type="body"
  >
    <styled.span
      color="#262D33"
      data-component-type="text"
      isInline={true}
      textType="body"
    >
      <span
        className="c1"
        color="#262D33"
        data-component-type="text"
      >
        1.000
      </span>
    </styled.span>
  </Text>
</Field>
`;

exports[`<Field /> should render a Field component, creating a Text child with the provided text 1`] = `
.c0 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
  display: block;
}

.c1 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #262D33;
  font-weight: 400;
}

<Field
  label="Position Title"
>
  <styled.div>
    <div
      className=""
    >
      <Text
        className="label-component"
        color="#424F5C"
        isInline={false}
        tag="span"
        type="small"
      >
        <styled.span
          className="label-component"
          color="#424F5C"
          data-component-type="text"
          isInline={false}
          textType="small"
        >
          <span
            className="label-component c0"
            color="#424F5C"
            data-component-type="text"
          >
            Position Title
          </span>
        </styled.span>
      </Text>
    </div>
  </styled.div>
  <Text
    color="#262D33"
    isInline={true}
    key=".0"
    tag="span"
    type="body"
  >
    <styled.span
      color="#262D33"
      data-component-type="text"
      isInline={true}
      textType="body"
    >
      <span
        className="c1"
        color="#262D33"
        data-component-type="text"
      >
        Chief Executive Officer
      </span>
    </styled.span>
  </Text>
</Field>
`;

exports[`<Field /> should render a Field component, with the provided component child 1`] = `
.c0 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
  display: block;
}

<Field
  label="Position Title"
>
  <styled.div>
    <div
      className=""
    >
      <Text
        className="label-component"
        color="#424F5C"
        isInline={false}
        tag="span"
        type="small"
      >
        <styled.span
          className="label-component"
          color="#424F5C"
          data-component-type="text"
          isInline={false}
          textType="small"
        >
          <span
            className="label-component c0"
            color="#424F5C"
            data-component-type="text"
          >
            Position Title
          </span>
        </styled.span>
      </Text>
    </div>
  </styled.div>
  <p
    key=".0"
  >
    Chief Executive Officer
  </p>
</Field>
`;
